# libxlsxwriter

./: .cirrus.yml  .drone.yml  .gitignore  .indent.pro  .travis.yml  319.patch  CMakeLists.txt  CONTRIBUTING.md  CTestCustom.cmake.in  Changes.txt  Dockerfile  ISSUE_TEMPLATE.md  LICENSE.txt  License.txt  Makefile  Mayhemfile  PULL_REQUEST_TEMPLATE.md  Package.swift  Readme.md  appveyor.yml  build.zig  build.zig.zon  libxlsxwriter.podspec  meson.build  meson_options.txt
dev/fuzzing/: CMakeLists.txt  build.sh  xlsx_fuzzer.cpp
examples/: CMakeLists.txt  Makefile  anatomy.c  array_formula.c  autofilter.c  background.c  chart.c  chart_area.c  chart_bar.c  chart_clustered.c  chart_column.c  chart_data_labels.c  chart_data_table.c  chart_data_tools.c  chart_doughnut.c  chart_fonts.c  chart_line.c  chart_pattern.c  chart_pie.c  chart_pie_colors.c  chart_radar.c  chart_scatter.c  chart_styles.c  chart_working_with_example.c  chartsheet.c  comments1.c  comments2.c  conditional_format.c  conditional_format1.c  conditional_format2.c  constant_memory.c  data_validate.c  dates_and_times01.c  dates_and_times02.c  dates_and_times03.c  dates_and_times04.c  defined_name.c  demo.c  diagonal_border.c  doc_custom_properties.c  (+36 more)
src/: CMakeLists.txt  Makefile  app.c  chart.c  chartsheet.c  comment.c  content_types.c  core.c  custom.c  drawing.c  format.c  hash_table.c  meson.build  metadata.c  packager.c  relationships.c  rich_value.c  rich_value_rel.c  rich_value_structure.c  rich_value_types.c  shared_strings.c  styles.c  table.c  theme.c  utility.c  vml.c  workbook.c  worksheet.c  xmlwriter.c
test/functional/: CMakeLists.txt  base_test_class.py  conftest.py  helper_functions.py  test_array_formula.py  test_autofilter.py  test_background.py  test_button.py  test_chart_area.py  test_chart_axis.py  test_chart_bar.py  test_chart_blank.py  test_chart_chartarea.py  test_chart_column.py  test_chart_crossing.py  test_chart_data_labels.py  test_chart_display_units.py  test_chart_doughnut.py  test_chart_drop_lines.py  test_chart_errorbars.py  test_chart_font.py  test_chart_format.py  test_chart_gap.py  test_chart_gridlines.py  test_chart_high_low_lines.py  test_chart_layout.py  test_chart_legend.py  test_chart_line.py  test_chart_order.py  test_chart_pattern.py  test_chart_pie.py  test_chart_points.py  test_chart_radar.py  test_chart_scatter.py  test_chart_size.py  test_chart_sparse.py  test_chart_str.py  test_chart_table.py  test_chart_title.py  test_chart_up_down_bars.py  (+46 more)
test/functional/src/: CMakeLists.txt  Makefile  test_array_formula01.c  test_array_formula02.c  test_array_formula03.c  test_array_formula04.c  test_autofilter00.c  test_autofilter01.c  test_autofilter02.c  test_autofilter03.c  test_autofilter04.c  test_autofilter05.c  test_autofilter06.c  test_autofilter07.c  test_autofilter08.c  test_autofilter09.c  test_autofilter10.c  test_autofilter11.c  test_background01.c  test_background02.c  test_background03.c  test_background04.c  test_background05.c  test_background06.c  test_background07.c  test_background52.c  test_button01.c  test_button02.c  test_button03.c  test_button04.c  test_button05.c  test_button06.c  test_button07.c  test_button08.c  test_button09.c  test_button10.c  test_button11.c  test_button12.c  test_button13.c  test_button14.c  (+759 more)
test/functional/xlsx_files/: chart_axis42.xlsx  chart_bar18.xlsx  chart_bar51.xlsx  chart_layout01.xlsx  chart_layout02.xlsx  chart_layout03.xlsx  chart_layout04.xlsx  chart_layout05.xlsx  chart_layout06.xlsx  chart_layout08.xlsx  chartsheet08.xlsx  comment11.xlsx  data01.xlsx  data02.xlsx  data03.xlsx  data04.xlsx  data05.xlsx  data06.xlsx  data07.xlsx  data08.xlsx  data09.xlsx  defined_name01.xlsx  defined_name02.xlsx  defined_name03.xlsx  defined_name04.xlsx  fit_to_pages01.xlsx  fit_to_pages02.xlsx  fit_to_pages03.xlsx  fit_to_pages04.xlsx  fit_to_pages05.xlsx  format02.xlsx  format06.xlsx  format07.xlsx  format08.xlsx  format09.xlsx  format10.xlsx  format50.xlsx  format51.xlsx  format52.xlsx  gh42_01.xlsx  (+66 more)
test/unit/: CMakeLists.txt  Makefile  Makefile.unit  ctest.h  helper.h  test_all.c
test/unit/app/: Makefile  main.c  test_app.c  test_app.cpp  test_app_xml_declaration.c  test_app_xml_declaration.cpp
test/unit/chart/: Makefile  main.c  test_chart.c  test_chart_write_legend.c  test_chart_xml_declaration.c
test/unit/chartsheet/: test_chartsheet.c  test_chartsheet_write_sheet_protection.c  test_chartsheet_xml_declaration.c
test/unit/comment/: Makefile  main.c  test_comment_xml_declaration.c
test/unit/content_types/: test_content_types.c  test_content_types.cpp  test_content_types_write_default.c  test_content_types_write_default.cpp  test_content_types_write_override.c  test_content_types_write_override.cpp  test_content_types_xml_declaration.c  test_content_types_xml_declaration.cpp
test/unit/core/: main.c  test_core.c  test_core.cpp  test_core_xml_declaration.c  test_core_xml_declaration.cpp
test/unit/custom/: Makefile  main.c  test_custom_xml_declaration.c
test/unit/drawing/: Makefile  main.c  test_drawing_image.c  test_drawing_xml_declaration.c
test/unit/metadata/: test_metadata_xml_declaration.c
test/unit/relationships/: Makefile  main.c  test_relationships.c  test_relationships.cpp  test_relationships_xml_declaration.c  test_relationships_xml_declaration.cpp
test/unit/rich_value/: test_rich_value_xml_declaration.c
test/unit/rich_value_rel/: test_rich_value_rel_xml_declaration.c
test/unit/rich_value_structure/: main.c  test_rich_value_structure_xml_declaration.c
test/unit/rich_value_types/: test_rich_value_types_xml_declaration.c
test/unit/sst/: main.c  test_shared_strings.c  test_shared_strings.cpp  test_sst_xml_declaration.c  test_sst_xml_declaration.cpp
test/unit/styles/: main.c  test_styles.c  test_styles.cpp  test_styles_write_border.c  test_styles_write_border.cpp  test_styles_write_borders.c  test_styles_write_borders.cpp  test_styles_write_cell_style.c  test_styles_write_cell_style.cpp  test_styles_write_cell_style_xfs.c  test_styles_write_cell_style_xfs.cpp  test_styles_write_cell_styles.c  (+33 more)
(+248 files in other folders)
